compiler/tests/fail/common/inline-remains.jazz
export fn main(reg u32 x) -> reg u32 {
  reg u32 r;
  #[inline]
  if x <s x + 1 {
    r = -1;
  } else {
    r = 0;
  }
  return r;
}
